# kroket

./: .gitignore  README  default.nix  shell.nix
examples/: default.nix
examples/hello/: default.nix
examples/hello/src/: hello.kroket
frituur/: default.nix  frituur.cabal
frituur/main/: frituur.hs
frituur/src/Frituur/: Anf.hs  Ast.hs  Interface.hs  Intrinsic.hs  Literal.hs  Location.hs  Main.hs  Name.hs
frituur/src/Frituur/Anf/: Generate.hs  Translate.hs
frituur/src/Frituur/Ast/: Lex.x  Parse.y
mosterd/: configuration.dhall  default.nix
nix/: pkgs.nix
ragout/: default.nix
ragout/src/: coerce.kroket  hazards.kroket  io.kroket  panic.kroket
ragout/src/abstract/: category.kroket
ragout/src/text/: utf8.kroket
support/vscode/: package.json
support/vscode/syntaxes/: kroket.json
