build-type: Simple
cabal-version: >= 1.10

name: frituur
version: 0.0.0.0

library
  build-depends:
    aeson,
    array,
    base,
    bytestring,
    containers,
    dhall,
    hashable,
    lens,
    mtl,
    text,
    transformers,
    unordered-containers

  build-tools:
    alex,
    happy

  default-extensions:
    DeriveAnyClass,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DerivingStrategies,
    FlexibleInstances,
    FunctionalDependencies,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MagicHash,
    OverloadedStrings

  default-language:
    Haskell2010

  exposed-modules:
    Frituur.Anf,
    Frituur.Anf.Generate,
    Frituur.Anf.Translate,
    Frituur.Ast,
    Frituur.Ast.Lex,
    Frituur.Ast.Parse,
    Frituur.Interface,
    Frituur.Intrinsic,
    Frituur.Literal,
    Frituur.Location,
    Frituur.Main,
    Frituur.Name,
    Frituur.Target.Link,
    Frituur.Target.Object,
    Frituur.Target.Php.Link,
    Frituur.Target.Php.Translate

  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns

  hs-source-dirs:
    src

executable frituur
  build-depends:
    base,
    frituur

  default-language:
    Haskell2010

  hs-source-dirs:
    main

  main-is:
    frituur.hs
